--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/badger-onchain-rewards"]
+	path = lib/badger-onchain-rewards
+	url = https://github.com/GalloDaSballo/badger-onchain-rewards
