--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,6 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 solc_version = '0.8.10'
-
+remappings = ["@oz=lib/openzeppelin-contracts/contracts/"]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
